# GameKit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Source/: Audio.hpp  Core.hpp  Graphics.hpp  Resource.hpp  Scene.hpp
Source/Audio/: AudioPlayer.hpp  Music.hpp  Sound.hpp
Source/Core/: ApplicationState.hpp  ApplicationStateStack.hpp  ArgumentParser.hpp  Box.hpp  CoreApplication.hpp  Debug.hpp  EventHandler.hpp  EventListenerList.hpp  Exception.hpp  Filesystem.hpp  GameClock.hpp  IntTypes.hpp  Logger.hpp  LoggerUtils.hpp  Mouse.hpp  Rect.hpp  SDLHeaders.hpp  SDLLoader.hpp  Timer.hpp  Utils.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  Window.hpp  XMLFile.hpp
Source/Core/Input/: GamePad.hpp  InputHandler.hpp  KeyboardHandler.hpp
Source/GL/: Camera.hpp  Drawable.hpp  GLCheck.hpp  OpenGL.hpp  RenderStates.hpp  RenderTarget.hpp  Shader.hpp  Texture.hpp  Transform.hpp  Transformable.hpp  Vertex.hpp  VertexBuffer.hpp  View.hpp
Source/Graphics/: BoxShape.hpp  Color.hpp  Font.hpp  Image.hpp  RectangleShape.hpp  Sprite.hpp  SpriteAnimation.hpp  Text.hpp  TextInput.hpp  TiledImage.hpp  Tilemap.hpp  Tileset.hpp
Source/Graphics/Tilemap/: TilemapAnimator.hpp  TilemapRenderer.hpp
Source/Math/: Math.hpp
Source/Resources/: IResourceLoader.hpp  ResourceHandler.cpp  ResourceHandler.hpp  TextureLoader.cpp  TextureLoader.hpp  TilemapLoader.cpp  TilemapLoader.hpp  TilesetLoader.cpp  TilesetLoader.hpp
Source/Scenes/: CollisionHelper.cpp  CollisionHelper.hpp  Scene.cpp  Scene.hpp  SceneObject.hpp  SceneObjectList.hpp
Source/Scenes/Behaviour/: Behaviour.hpp  EasyBehaviour.hpp
Source/Scenes/Components/: BehaviourComponent.hpp  CollisionComponent.hpp  HealthComponent.hpp  HitboxComponent.hpp  LifetimeComponent.hpp  MovementComponent.hpp  PositionComponent.hpp
Source/Scenes/Controllers/: AbstractController.hpp  BehaviourController.cpp  BehaviourController.hpp  EasyController.hpp  LifetimeController.cpp  LifetimeController.hpp  MovementController.cpp  MovementController.hpp
Source/Scenes/Movement/: EasyMovement.hpp  GamePadMovement.cpp  GamePadMovement.hpp  Movement.hpp
Source/Scenes/View/: AbstractView.hpp  EasyView.hpp  HitboxView.cpp  HitboxView.hpp  SpriteView.cpp  SpriteView.hpp
Source/Utils/: NonCopyable.hpp
cmakewin/Dependencies/SDL/: cmake_uninstall.cmake
cmakewin/Dependencies/SDL/include/: SDL_config.h
cmakewin/Dependencies/glad/include/glad/: glad.h
cmakewin/Dependencies/glad/src/: glad.c
include/gk/core/: Exception.hpp  Utils.hpp
source/audio/: AudioPlayer.cpp  Music.cpp  Sound.cpp
source/core/: ApplicationStateStack.cpp  ArgumentParser.cpp  CoreApplication.cpp  Filesystem.cpp  GameClock.cpp  Logger.cpp  LoggerUtils.cpp  Mouse.cpp  SDLLoader.cpp  Timer.cpp  Utils.cpp  Window.cpp  XMLFile.cpp
source/core/input/: GamePad.cpp  InputHandler.cpp  KeyboardHandler.cpp
source/gl/: Camera.cpp  GLCheck.cpp  RenderTarget.cpp  Shader.cpp  Texture.cpp  Transform.cpp  Transformable.cpp  VertexBuffer.cpp  View.cpp
source/graphics/: BoxShape.cpp  Color.cpp  Font.cpp  Image.cpp  RectangleShape.cpp  Sprite.cpp  SpriteAnimation.cpp  Text.cpp  TextInput.cpp  TiledImage.cpp  Tilemap.cpp  Tileset.cpp
source/graphics/tilemap/: TilemapAnimator.cpp  TilemapRenderer.cpp
source/scene/view/: HitboxView.cpp
